<resources>
    <string name="app_name">几米对讲</string>
    <string name="title_group">群组</string>
    <string name="title_Mine">我的好友</string>
    <string name="title_quit">退出</string>

    <string name="quit_tip">再按一次退出程序</string>

    <!--recyclerPull-->
    <string name="recycler_pull_loading">正在加载...</string>
    <string name="recycler_pull_done">已经加载完</string>

    <!--loginActivity-->
    <string name="login_account">请输入手机号</string>
    <string name="login_password">请输入密码</string>
    <string name="login_confirm_password">请输入确认密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_go_register">去注册</string>
    <string name="login_go_login">去登录</string>
    <string name="login_inconsistent_tips">两次输入的密码不一致</string>
    <string name="login_empty_tips">输入不能为空</string>
    <string name="login_register_success_tips">注册成功</string>
    <string name="login_login_success_tips">登录成功</string>

    <!--toolBar-->
    <string name="toolbar_commit">确定</string>

    <!--mine-->
    <string name="mine_search">搜索添加好友</string>
    <string name="mine_add_friend">添加好友</string>

    <!--group-->
    <string name="group_search">搜索加入群组</string>
    <string name="search_str_add_group">加入群组</string>
    <string name="search_str_added_group">已加入</string>

    <!--search-->
    <string name="search_str_friend">搜索好友</string>
    <string name="search_str_add_friend">添加好友</string>
    <string name="search_str_added_friend">已添加</string>
    <string name="search_str_group">搜索群组</string>

    <string name="request_data_null_tips">请求数据为空</string>

    <!--newGroup-->
    <string name="new_group_str_create">创建群组</string>
    <string name="new_group_str_create_success">创建群组成功</string>
    <string name="new_group_str_add_member_success">添加成员成功</string>

    <!--dialog-->
    <string name="dialog_commit">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_message_change_group">确定切换到群组吗？</string>
    <string name="dialog_message_exit">确定退出该账户吗?</string>
    <string name="dialog_message_group_name">请输入群组名称</string>
    <string name="dialog_message_group_add_member">确定将选中好友加入该群组吗?</string>
    <string name="dialog_message_quit_group_room_for_video">确定退出群组，进行视频呼叫吗?</string>
    <string name="dialog_message_quit_group_room_for_audio">确定退出群组，进行音频呼叫吗?</string>

    <!--audioCall-->
    <string name="audio_call_hangup">挂断</string>
    <string name="audio_call_cancel">取消</string>
    <string name="audio_call_accept">接听</string>
    <string name="audio_call_hangup_remote_tip">对方已挂断</string>
    <string name="audio_call_reject_remote_tip">对方已拒绝</string>
    <string name="audio_call_hangup_tip">已挂断</string>
    <string name="audio_call_cancel_tip">已取消</string>
    <string name="audio_call_no_accept_tip">对方无响应</string>

    <!--groupMemberList-->
    <string name="group_member_list_title_menu">添加成员</string>
    <string name="group_member_delete_member_tips">确定删除该成员吗?</string>
    <string name="group_im_button">即时通信</string>
    <string name="group_member_button">群成员</string>
    <string name="group_talk_history_button">历史对讲</string>
    
    <string name="no_record_permission">没有录音权限</string>
    <string name="release_record_cancel_sending">松开手指,取消发送</string>
    <string name="slip_record_cancel_sending">手指上滑,取消发送</string>
    <string name="release_record_sending">松开发送</string>
    <string name="press_and_hold_record">按住录音</string>
    <string name="record_time_too_short">录音时间太短</string>


</resources>
