<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#eeeeee"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        app:contentInsetStart="0dp"
        android:minHeight="?android:attr/actionBarSize"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left_black_24dp"
                android:visibility="invisible"
                android:layout_centerVertical="true" />
            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/login_login"
                android:textSize="@dimen/text_size_big"
                android:visibility="visible"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/toolbar_commit"
                android:textSize="@dimen/text_size_small"
                android:visibility="invisible"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_account"
                android:textSize="@dimen/edit_text_size_middle"
                android:background="@drawable/shape_box"
                android:textCursorDrawable="@null"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_password"
                android:textSize="@dimen/edit_text_size_middle"
                android:background="@drawable/shape_box"
                android:textCursorDrawable="@null"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:inputType="textPassword"
                />
            <EditText
                android:id="@+id/login_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_confirm_password"
                android:textSize="@dimen/edit_text_size_middle"
                android:background="@drawable/shape_box"
                android:textCursorDrawable="@null"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:visibility="gone"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="@dimen/btn_text_size_middle"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:padding="10dp"
                android:background="@drawable/button_login"
                android:textColor="@color/white"
                android:text="@string/login_login"
                />

            <TextView
                android:id="@+id/login_go_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_go_register"
                android:textColor="@color/colorMain"
                android:layout_marginTop="30dp"
                android:textSize="@dimen/text_size_middle"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>

