<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#eeeeee"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        app:contentInsetStart="0dp"
        android:minHeight="?android:attr/actionBarSize"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/create_group_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left_black_24dp"
                android:visibility="visible"
                android:layout_centerVertical="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/new_group_str_create"
                android:textSize="@dimen/text_size_big"
                android:visibility="visible"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/create_group_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="@string/toolbar_commit"
                android:textSize="@dimen/text_size_small"
                android:visibility="visible"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/create_group_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mine_search"
        android:textSize="@dimen/edit_text_size_middle"
        android:background="@drawable/shape_box"
        android:textCursorDrawable="@null"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:singleLine="true"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_search_black_24dp"
        android:imeOptions="actionSearch" />

    <ListView
        android:id="@+id/create_group_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

</LinearLayout>

