<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333">

    <LinearLayout
        android:id="@+id/audio_call_layout_gl_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.opengl.GLSurfaceView
            android:id="@+id/audio_call_gl_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/audio_call_layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:visibility="visible"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_account_box_black_48dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/audio_call_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_middle"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/audio_call_hangup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hangup"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_call_hangup"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/audio_call_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/hangup"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_call_cancel"
                android:textSize="@dimen/text_size_small"
                android:layout_marginTop="3dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/audio_call_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/accept"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio_call_accept"
                android:textSize="@dimen/text_size_small"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>

